# learning-sdl

./: .gitignore  CMakeLists.txt  README.md  learning-sdl.vcxproj  learning-sdl.vcxproj.filters
Debug/: learning-sdl.exe.recipe  learning-sdl.ilk  vc142.idb
Debug/learning-sdl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  learning-sdl.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
assets/audio/5 Action Chiptunes By Juhani Junkala/: INFO.txt
include/: game.h  gameobject.h  gamestate.h  sandboxstate.h
include/audio/: player.h
include/core/: ECS.h  assetsmanager.h  component.h  entity.h  entitymanager.h  game.h  gameobject.h  gamestate.h  gamestatemanager.h  inputmanager.h  map.h  sandboxstate.h  texturemanager.h
include/entities/: entity.h  entitymanager.h  transformComponent.h
include/game/: mapstate.h  mygame.h  sandboxstate.h
include/physics/: geometry2d.h  quadtree.h  vec2.h
include/ui/: button.h  label.h  uielement.h
includes/: game.cpp  game.h  gameobject.h  texturemanager.h
src/: game.cpp  gameobject.cpp  main.cpp  sandboxstate.cpp  texturemanager.cpp
src/audio/: player.cpp
src/core/: assetsmanager.cpp  entity.cpp  entitymanager.cpp  game.cpp  gameobject.cpp  gamestatemanager.cpp  inputmanager.cpp  map.cpp  texturemanager.cpp
src/entities/: entity.cpp  entitymanager.cpp
src/game/: mapstate.cpp  mygame.cpp  sandboxstate.cpp
src/physics/: geometry2d.cpp  quadtree.cpp
src/ui/: button.cpp  label.cpp
